2023-09-24T01:01:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6287057364 # 1204
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 4 2954
* notice: prev accum: outdated-unq outdated-all / unq all: 1699 160498 / 1730 163660
* notice: next accum: outdated-unq outdated-all / unq all: 1702 160797 / 1730 163754
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -3 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2023-09-09] / [2023-09-10 2023-09-23]

2023-09-23T16:14:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6284737768 # 1203
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 4 2900
* notice: prev accum: outdated-unq outdated-all / unq all: 1699 160498 / 1730 163565
* notice: next accum: outdated-unq outdated-all / unq all: 1699 160498 / 1730 163660
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -94 / +2 +207 -0 -0 / 2 207
* notice: removed / changed dates: [] / [2023-09-09 2023-09-23]

2023-09-23T08:14:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6282581523 # 1202
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 4 2899
* notice: prev accum: outdated-unq outdated-all / unq all: 1699 160498 / 1728 163453
* notice: next accum: outdated-unq outdated-all / unq all: 1699 160498 / 1730 163565
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -112 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-09 2023-09-23]

2023-09-23T00:56:48Z: