@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-24T01:01:47Z",
+  "timestamp" : "2023-09-24T08:14:44Z",
   "count_outdated" : 160797,
   "uniques_outdated" : 1702,
-  "count" : 163754,
-  "uniques" : 1730,
+  "count" : 163866,
+  "uniques" : 1732,
   "clones" : [
     {
       "timestamp": "2023-09-10T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 50, 53 ],
-      "count_decinc": [ 3, 53 ],
+      "count": 34,
+      "count_minmax": [ 34, 53 ],
+      "count_decinc": [ 19, 53 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +127,15 @@
       "count": 301,
       "count_minmax": [ 112, 301 ],
       "count_decinc": [ 0, 301 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-24T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
